[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["JTkocz <jozeftkocz@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
